# Embedded

./: README.md  nrfjprog工具.md
Git/: README.md
Nordic/nrf52832/按键实验/test_key/: CMakeLists.txt
Nordic/nrf52832/按键实验/test_key/src/: main.c
Nordic/nrf52832/按键实验/test_key/src/key/: key.c  key.h
Nordic/nrf52832/按键实验/test_key/src/led/: led.c  led.h
Nordic/nrf52832/点灯实验/test_led/: CMakeLists.txt  prj.conf
Nordic/nrf52832/点灯实验/test_led/include/: led.h
Nordic/nrf52832/点灯实验/test_led/src/: led.c  main.c
Nordic/nrf52840/广播间隔和广播功率/peripheral_uart1/: CMakeLists.txt  prj.conf
Nordic/nrf52840/广播间隔和广播功率/peripheral_uart1/src/: main.c
