# =============================================================================
# CMakeLists.txt - Zephyr项目构建配置文件
# =============================================================================
# 
# 本文件用于配置基于Zephyr RTOS的nRF52832项目构建。
# 定义了CMake最低版本要求、项目名称、头文件路径和源文件列表。
# 
# 使用说明：
#   1. 本文件由CMake构建系统读取
#   2. 不应直接编辑，应通过修改源代码和配置文件来改变项目行为
#   3. 构建产物（build目录）可安全删除后重新生成
#

# =============================================================================
# 1. CMake版本要求
# =============================================================================
# 指定CMake最低版本为3.20.0
# Zephyr SDK需要CMake 3.20.0或更高版本
cmake_minimum_required(VERSION 3.20.0)

# =============================================================================
# 2. Zephyr包查找
# =============================================================================
# 查找Zephyr RTOS包并加载其配置
# HINTS $ENV{ZEPHYR_BASE} 指定在ZEPHYR_BASE环境变量指定的路径查找
# REQUIRED 表示如果找不到Zephyr包则CMake配置失败
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

# =============================================================================
# 3. 项目名称定义
# =============================================================================
# 定义项目名称为test_key
# 此名称将用于生成的部分输出文件和配置
project(test_key)

# =============================================================================
# 4. 头文件目录配置
# =============================================================================
# 将src目录添加到应用程序的私有包含路径
# PRIVATE关键字表示这些路径仅对当前目标有效，不会传递到依赖项
# ${CMAKE_CURRENT_SOURCE_DIR} 是当前CMakeLists.txt所在目录的绝对路径
target_include_directories(app PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

# =============================================================================
# 5. 源文件列表配置
# =============================================================================
# 指定要编译的源文件
# app是Zephyr为应用程序目标预设的目标名称
# PRIVATE关键字表示这些源文件仅属于当前目标
target_sources(app PRIVATE 
    src/main.c      # 主程序入口
    src/led/led.c  # LED驱动实现
    src/key/key.c   # 按键驱动实现
)
